minikube-deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cyclopousse
  labels:
    app: cyclopousse-morondava
